--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <img src = "CS458 Header.png">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
