--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <img src = "CS458 Header.png">
+    <div id = "header"><img src = "CS458 Header.png"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
